# geometric-mnemic-manifolds

./: .firebaserc  .gitignore  CITATION.cff  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  benchmark_suite.py  demo.py  firebase.json  gmm_prototype.py  gmm_visualization_viewer.html  index.html  pyproject.toml  requirements.txt  setup.py
benchmarks/: cloud_v2_benchmark.py  concurrent_benchmark.py  distributed_benchmark.py  epistemic_benchmark.py  hnsw_scaling.py  native_benchmark.py  needle_benchmark.py  optimize_parameters.py  parallel_broadcast_benchmark.py  regenerate_plots.py  run_benchmarks.py  simulate_fovea_math.py  stress_test_recall.py  verify_daisy_chain.py  verify_fovea_indices.py  visualizer.py
benchmarks/baselines/: hnsw.py
cloud_benchmark_results/: cloud_benchmark_analysis.tex  cloud_benchmark_v2.tex
deploy/: Dockerfile  cloudbuild-run.yaml  k8s-job.yaml  k8s-v2.yaml  run_cloud.sh
docs/: README.md
docs/citations/: .zenodo.json  CITATION.bib  CITATION.cff
docs/explainer/: gmm-visualizations.js  index.html
docs/guides/: CONTRIBUTING.md  QUICKSTART.md
docs/paper/: geometric_mnemic_manifolds_v22.tex  gmm_position_paper_v3.0.tex
examples/: run_prototype.py
gmm-phase0/: README.md  STAGE_A_IMPLEMENTATION.md  STAGE_B_SPECIFICATION.md  pyproject.toml
gmm-phase0/configs/: model.yaml  training.yaml  world.yaml
gmm-phase0/data/ontology/: entity_types.yaml  relation_types.yaml
gmm-phase0/src/: __init__.py
gmm-phase0/src/generation/: __init__.py
src/: __init__.py  benchmark_server.py
src/gmm/: __init__.py
src/gmm/core/: __init__.py  engram.py  manifold.py
src/gmm/geometry/: __init__.py  position.py  spiral.py
src/gmm/hierarchy/: __init__.py  compressor.py
src/gmm/native/: binding.cpp  kernel.cpp
src/gmm/query/: __init__.py  retriever.py
src/gmm/storage/: __init__.py  serializer.py
src/gmm/synthesis/: __init__.py  biography.py
web/: geometric_mnemic_manifold_3d.html  gmm_explainer.html  index.html
