[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geometric-mnemic-manifolds"
version = "1.0.0"
description = "A Foveated Architecture for Autonoetic Memory in LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alan Garcia", email = "your.email@example.com"}
]
maintainers = [
    {name = "Alan Garcia", email = "your.email@example.com"}
]
keywords = [
    "artificial-intelligence",
    "memory-systems",
    "geometric-topology",
    "autonoetic-memory",
    "vector-databases",
    "RAG-systems",
    "Kronecker-sequences",
    "hierarchical-compression",
    "machine-learning",
    "LLMs"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
viz = [
    "matplotlib>=3.5.0",
]
all = [
    "geometric-mnemic-manifolds[dev,viz]"
]

[project.urls]
Homepage = "https://github.com/garciaalan186/geometric-mnemic-manifolds"
Documentation = "https://github.com/garciaalan186/geometric-mnemic-manifolds#readme"
Repository = "https://github.com/garciaalan186/geometric-mnemic-manifolds"
Issues = "https://github.com/garciaalan186/geometric-mnemic-manifolds/issues"

[project.scripts]
gmm-prototype = "examples.run_prototype:main"
gmm-benchmark = "benchmarks.run_benchmarks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
